# sokoban-tree-based

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_test.ipynb  sokoban.ipynb  sokoban.py  test.ipynb
agent/: agent copy.py  agent.py  instructions.py  output_entity.py
dataset/test/: 1_0.txt  1_1.txt  1_2.txt  1_4.txt  4_0.txt  4_2.txt
docs/: review_code.md
edges/: edges.py
graph/: graph.py  states.py
nodes/: nodes.py
sokoban/: sokoban_tools.py
